# fuzzy-xai-operator

./: .gitignore  03_glava_3_final_reviewer_fixed_submission_ready.docx  BUILD_NATIVE.md  CHAPTER_MAPPING.md  DUBNAXAI_FULL_WORK_REPORT.md  DUBNAXAI_MIGRATION_REPORT.md  Dockerfile  FRONTEND_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRESENTATION.md  PROOF_GUIDE.md  README.md  README_DOCTORAL_RELEASE.md  README_chapter3_practice_reproduce.md  README_chapter3_reproduce.md  RELEASE_NOTES.md  REPO_RESTRUCTURE_PLAN.md  ROADMAP_RU.md  TZ_risk_oriented_observer_FuzzyXAI.docx  full_observer_pipeline.py  full_pipeline_demo.py  fuzzyxai_gui.spec  pyproject.toml  pytest.ini  requirements.txt  run_all.sh  yaml.py
api/: openapi.yaml
applications/: check_operator_routes.py  export_operator_routes.py  run_all_scenarios.py  run_framework_scenario.py
apps/: chapter5_web_demo.py  defense_demo.py  fuzzyxai_studio.py  layered_demo.py  nicegui_dashboard.py  unified_demo.py
benchmarks/: breast_cancer_benchmark.py  lofo_f1_rule_pruning_demo.py  operator_comparison_benchmark.py  risk_aware_observer_benchmark.py
deploy/: Dockerfile.api  Dockerfile.studio  docker-compose.yml
dissertation_artifacts/: artifact_manifest_sha256.json  captions.md  figure_captions_final.md  figure_to_text_map.csv  insertion_plan.md  retained_figures_manifest.csv
docs/: CATEGORICAL_HOTT_EXTENSION_RU.md  CATEGORICAL_TOPOS_IMPLEMENTATION_RU.md  DATASET_OBSERVER_PIPELINE_RU.md  DATA_AND_SCENARIO_POLICY.md  FORMAL_THEOREMS_CH2_CH3_RU.md  IMPLEMENTATION_INVENTORY_VNEXT_RU.md  LAYERED_DEMO_GUIDE_RU.md  (+8 more)
(+1482 files in other folders)
